[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/Music/DJAMH_MainMenu2.mp3" type="AudioStream" id=2]
[ext_resource path="res://Menus/Images/Webp.net-resizeimage.jpg" type="Texture" id=3]
[ext_resource path="res://Menus/Fonts/SpaceRave-6YE1M.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Menus/Fonts/Pixeboy-z8XGD.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 5 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 193.0
margin_top = 179.0
margin_right = 830.0
margin_bottom = 421.0
custom_constants/separation = 50

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 637.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 637.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.666667, 0.933333, 0.572549, 1 )
custom_colors/font_color_shadow = Color( 0.894118, 0.27451, 0.27451, 1 )
text = "Defence Of The Earth"
uppercase = true

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 637.0
margin_bottom = 242.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 155.0
margin_right = 481.0
margin_bottom = 120.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 326.0
margin_bottom = 27.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 326.0
margin_bottom = 27.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 28.0
margin_bottom = 27.0
rect_min_size = Vector2( 28, 0 )
custom_fonts/font = SubResource( 2 )
custom_constants/shadow_offset_y = 0
text = ">"

[node name="Start" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 326.0
margin_bottom = 27.0
rect_min_size = Vector2( 294, 0 )
custom_fonts/font = SubResource( 2 )
custom_constants/shadow_offset_y = 0
text = " Start"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 31.0
margin_right = 326.0
margin_bottom = 58.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 326.0
margin_bottom = 27.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 28.0
margin_bottom = 27.0
rect_min_size = Vector2( 28, 0 )
custom_fonts/font = SubResource( 2 )
custom_constants/shadow_offset_y = 0
text = ">"

[node name="Continue" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 32.0
margin_right = 326.0
margin_bottom = 27.0
rect_min_size = Vector2( 294, 0 )
custom_fonts/font = SubResource( 2 )
custom_constants/shadow_offset_y = 0
text = " Levels"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 62.0
margin_right = 326.0
margin_bottom = 89.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_right = 326.0
margin_bottom = 27.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 28.0
margin_bottom = 27.0
rect_min_size = Vector2( 28, 0 )
custom_fonts/font = SubResource( 2 )
custom_constants/shadow_offset_y = 0
text = ">"

[node name="Options" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 32.0
margin_right = 326.0
margin_bottom = 27.0
rect_min_size = Vector2( 294, 0 )
custom_fonts/font = SubResource( 2 )
custom_constants/shadow_offset_y = 0
text = " Options"

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 93.0
margin_right = 326.0
margin_bottom = 120.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4"]
margin_right = 326.0
margin_bottom = 27.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 28.0
margin_bottom = 27.0
rect_min_size = Vector2( 28, 0 )
custom_fonts/font = SubResource( 2 )
custom_constants/shadow_offset_y = 0
text = ">"

[node name="Exit" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_left = 32.0
margin_right = 326.0
margin_bottom = 27.0
rect_min_size = Vector2( 294, 0 )
custom_fonts/font = SubResource( 2 )
custom_constants/shadow_offset_y = 0
text = " Exit"

[node name="MainBackground" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0
autoplay = true
